--- a/Modules/Admin/Tpl/Rbac_addrole.html
+++ b/Modules/Admin/Tpl/Rbac_addrole.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title></title>
+	<title>添加角色</title>
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Css/public.css">
 </head>
 <body>
