--- a/Modules/Admin/Tpl/Index_index.html
+++ b/Modules/Admin/Tpl/Index_index.html
@@ -36,10 +36,10 @@
 		</dl>
 		<dl>
 			<dt>RBAC管理</dt>
-			<dd><a href="#">用户列表</a></dd>
+			<dd><a href="{:U('Admin/Rbac/index')}">用户列表</a></dd>
 			<dd><a href="{:U('Admin/Rbac/role')}">角色列表</a></dd>
 			<dd><a href="{:U('Admin/Rbac/node')}">节点列表</a></dd>
-			<dd><a href="#">添加用户</a></dd>
+			<dd><a href="{:U('Admin/Rbac/addUser')}">添加用户</a></dd>
 			<dd><a href="{:U('Admin/Rbac/addRole')}">添加角色</a></dd>
 			<dd><a href="{:U('Admin/Rbac/addNode')}">添加节点</a></dd>
 		</dl>
@@ -54,7 +54,7 @@
 		</dl>
 	</div>
 	<div id="right">
-		<iframe name="iframe" src=""></iframe>
+		<iframe name="iframe" src="{:U('Admin/Rbac/index')}"></iframe>
 	</div>
 </body>
 </html>
