--- a/Modules/Admin/Tpl/Rbac_access.html
+++ b/Modules/Admin/Tpl/Rbac_access.html
@@ -29,20 +29,20 @@
 				<div class='app'>
 					<p>
 						<strong>{$app.title}</strong>
-						<input type='checkbox' name='access[]' value="{$app['id']}_1" level='1'>
+						<input type='checkbox' name='access[]' value="{$app['id']}_1" level='1' <if condition="$app['access']">checked="checked"</if>>
 					</p>
 
 					<foreach name='app.child' item='action'>
 						<dl>
 							<dt>
 								<strong>{$action['title']}</strong>
-								<input type='checkbox' name='access[]' value="{$action['id']}_2" level='2'>
+								<input type='checkbox' name='access[]' value="{$action['id']}_2" level='2' <if condition="$action['access']">checked="checked"</if>>
 							</dt>
 
 							<foreach name='action.child' item='method'>
 								<dd>
 									<span>{$method['title']}</span>
-									<input type='checkbox' name='access[]' value="{$method['id']}_3" level='3'>
+									<input type='checkbox' name='access[]' value="{$method['id']}_3" level='3' <if condition="$method['access']">checked="checked"</if>>
 								</dd>
 							</foreach>
 
