--- a/Modules/Admin/Tpl/Index_index.html
+++ b/Modules/Admin/Tpl/Index_index.html
@@ -19,7 +19,7 @@
 			<a href="#">选择按钮</a>
 		</div>
 		<div class="exit">
-			<a href="#" target="_self">退出</a>
+			<a href="{:U('Admin/Index/logout')}" target="_self">注销</a>
 			<a href="http://bbs.houdunwang.com" target="_blank">获得帮助</a>
 			<a href="http://www.houdunwang.com" target="_blank">后盾网</a>
 		</div>
